feat: implemented feature flags & runtime controls
